<resources>
    <string name="app_name">MusicLibrary</string>
    <string name="player">Music player</string>
    <string name="playlist_image">Playlist\'s image</string>
    <string name="category_image">Category image</string>
    <string name="playlist_button_desc">Playlist button</string>
    <string name="category_back_button">Category back button</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause button</string>
    <string name="stop_button">Stop button</string>
    <string name="forward_button">Forward button</string>
    <string name="backward_button">Backward button</string>
    <string name="playlist_back_button">Playlist\'s back button</string>
    <string name="play_icon">Player icon</string>
    <string name="player_image">Player\'s image</string>
    <string name="now_playing">Now playing:</string>
    <string name="volume_control">Volume control</string>
    <string name="category_enter">Enter the category</string>

    <string name="image">image</string>
    <string name="author">author</string>
    <string name="title">title</string>
    <string name="sound">sound</string>
    <string name="alpha">Alpha</string>
    <string name="scalex">ScaleX</string>
    <string name="jumped_forward">You have jumped forward 5 seconds</string>
    <string name="no_jump_forward">You can\'t jump forward 5 seconds</string>
    <string name="jumped_backward">You have jumped backward 5 seconds</string>
    <string name="no_jump_backward">You can\'t jump backward 5 seconds"</string>

    <string name="library_beatles">The Beatles</string>
    <string name="library_stones">Rolling Stones</string>
    <string name="library_elvis">Elvis Presley</string>
    <string name="library_greenday">Green Day</string>

    <string name="category_beatles">The Beatles</string>
    <string name="category_stones">Rolling Stones</string>
    <string name="category_elvis">Elvis Presley</string>
    <string name="category_greenday">Green Day</string>

    <string name="category_beatles_description">The Beatles – legendary rock group, formed in Liverpool England, one of the most popular bands of all the time. Creators of top songs like „Yesterday”, „All you need is love” and „Help”.</string>
    <string name="category_stones_description">The Rolling Stones – British rock band, formed in 1962 in London. Rooted in blues and early Rock and Roll they were icons of youthful and rebellious counterculture of the 1960s.</string>
    <string name="category_elvis_description">Elvis Presley was an American Singer and actor. He is one of the most celebrated and influential musicians of the 20th century. Commercially successful, he has won three Grammy Awards.</string>
    <string name="category_greenday_description">Green day is an American punk rock band formed in 1986 in East Bay, California. They have sold more then 85 million records worldwide. The group has also won five Grammy Awards.</string>

    <string name="playlist_beatles">The Beatles</string>
    <string name="playlist_stones">Rolling Stones</string>
    <string name="playlist_elvis">Elvis Presley</string>
    <string name="playlist_greenday">Green Day</string>

    <string name="b1">Any time at all</string>
    <string name="b2">Birthday</string>
    <string name="b3">Black Bird</string>
    <string name="b4">Boys</string>
    <string name="b5">Can\'t buy me love</string>
    <string name="b6">Chains</string>
    <string name="b7">Come together</string>
    <string name="b8">Do you want to know\nthe secret?</string>
    <string name="b9">Free as a bird</string>
    <string name="b10">From me to you</string>
    <string name="b11">Help</string>
    <string name="b12">Here comes the sun</string>
    <string name="b13">Hey Jude</string>
    <string name="b14">I saw her</string>
    <string name="b15">I want to hold your hand</string>
    <string name="b16">It won\'t be long</string>
    <string name="b17">Let it be</string>
    <string name="b18">Love me do</string>
    <string name="b19">Lucy in the sky with\ndiamonds</string>
    <string name="b20">Penny Lane</string>
    <string name="b21">Please please me</string>
    <string name="b22">Real love</string>
    <string name="b23">Sexie Sadie</string>
    <string name="b24">Sgt Peppers lonely hearts\nclub band</string>
    <string name="b25">She loves you</string>
    <string name="b26">Ticket to ride</string>
    <string name="b27">Twist and shout</string>
    <string name="b28">We can work it out</string>
    <string name="b29">When I\'m sixty-four</string>
    <string name="b30">With a little help from\nmy friends</string>
    <string name="b31">Yesterday</string>

    <string name="s1">19th nervous breakdown</string>
    <string name="s2">Angie</string>
    <string name="s3">Anybody seen my baby?</string>
    <string name="s4">As tears go by</string>
    <string name="s5">Beast of burden</string>
    <string name="s6">Brown sugar</string>
    <string name="s7">Can\'t be seen</string>
    <string name="s8">Fool to cry</string>
    <string name="s9">Gimme shelter</string>
    <string name="s10">Honky tonk woman</string>
    <string name="s11">It\'s all over now</string>
    <string name="s12">It\'s only rock\'n\'roll</string>
    <string name="s13">Jumpin\' Jack Flash</string>
    <string name="s14">Let\'s spend the night\ntogether</string>
    <string name="s15">Love is strong</string>
    <string name="s16">Miss you</string>
    <string name="s17">Mother\'s little helpers</string>
    <string name="s18">Paint it black</string>
    <string name="s19">Ruby tuesday</string>
    <string name="s20">Satisfaction</string>
    <string name="s21">She\'s so cold</string>
    <string name="s22">Start me up</string>
    <string name="s23">Time is on my side</string>
    <string name="s24">You can\'t always get what\nyou want</string>

    <string name="e1">All shook up</string>
    <string name="e2">Are you lonesome tonight</string>
    <string name="e3">Blue suede shoes</string>
    <string name="e4">Burning love</string>
    <string name="e5">Can\'t help falling in love</string>
    <string name="e6">Devil is disguise</string>
    <string name="e7">Don\'t be cruel</string>
    <string name="e8">Heartbreak hotel</string>
    <string name="e9">His latest flame</string>
    <string name="e10">Hound dog</string>
    <string name="e11">In the ghetto</string>
    <string name="e12">Jailhouse rock</string>
    <string name="e13">Return to sender</string>
    <string name="e14">Suspisious minds</string>
    <string name="e15">Teddy bear</string>
    <string name="e16">That\' all right mama</string>
    <string name="e17">Viva Las Vegas</string>

    <string name="g1">16</string>
    <string name="g2">1000 hours</string>
    <string name="g3">2000 light years away</string>
    <string name="g4">86</string>
    <string name="g5">American idiot</string>
    <string name="g6">Are we the waiting</string>
    <string name="g7">Brainstew</string>
    <string name="g8">Christie road</string>
    <string name="g9">Coming clean</string>
    <string name="g10">Extraordinary girl</string>
    <string name="g11">Geek stink breath</string>
    <string name="g12">Give me novacaine</string>
    <string name="g13">Good riddance</string>
    <string name="g14">Hitchin\' a ride</string>
    <string name="g15">Holiday</string>
    <string name="g16">Homecoming</string>
    <string name="g17">In the end</string>
    <string name="g18">Letterbomb</string>
    <string name="g19">Longview</string>
    <string name="g20">Only of you</string>
    <string name="g21">Same in the end</string>
    <string name="g22">She\'s a rebel</string>
    <string name="g23">St Jimmy</string>
    <string name="g24">Wake me up when september ends</string>
    <string name="g25">Walking contradiction</string>
    <string name="g26">When I come around</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
